include(CMakeDependentOption)
CMAKE_DEPENDENT_OPTION(UBUNTU_PROFILE "Ubuntu Profile" ON "ENABLE_PROFILE STREQUAL UBUNTU" OFF)
#message(!!!!!!!!!! ${ENABLE_PROFILE})
#message(!!!!!!!!!! ${UBUNTU_PROFILE})

IF( DEFINED MODULE )
    MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/${MODULE}")
    ADD_SUBDIRECTORY(${MODULE})
ELSE( DEFINED MODULE )
    MESSAGE(FATAL_ERROR "No module selected to build. Aborting...")
ENDIF( DEFINED MODULE )
